<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="facebook_application_id" tools:keep="@string/facebook_application_id" translatable="false">952362162004154</string>
    <string name="fb_login_protocol_scheme" tools:keep="@string/fb_login_protocol_scheme" translatable="false">fb952362162004154</string>
    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_map">Map View</string>
    <string name="bottom_navigation_menu_list">List View</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>
    <string name="search_hint" tools:keep="@string/search_hint">Search restaurants</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profile_picture">profile picture</string>
    <string name="go4lunch" translatable="false">GO4LUNCH</string>
    <string name="default_firstname_lastname" translatable="false">default FirstName LastName</string>
    <string name="default_email_email_com" translatable="false">default email@email.com</string>
    <string name="image_detail" translatable="false">image detail</string>
    <string name="floating_button" translatable="false">floating button</string>
    <string name="default_name" translatable="false">Default name</string>
    <string name="default_address" translatable="false">Default address</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="default_title" translatable="false">default title</string>
    <string name="default_open_hours" translatable="false">default open hours</string>
    <string name="_0_m" translatable="false">0 m</string>
    <string name="_0" translatable="false">(0)</string>
    <string name="cell_image" translatable="false">cell image</string>
    <string name="search">Search</string>
    <string name="search_restaurant">Search restaurants</string>
    <string name="i_m_hungry">I\'m Hungry!</string>
    <string name="available_workmates">Available workmates</string>
    <string name="hasn_t_decided_yet">hasn\'t decided yet</string>
    <string name="is_eating_at">is eating at</string>
    <string name="is_joining">is joining!</string>
    <string name="no_web_site">No available web site</string>
    <string name="no_tel">No available phone number</string>
    <string name="like_sent">Like sent</string>
    <string name="default_notification_channel_id">326</string>
    <string name="you_eat_with">There will be :</string>
    <string name="you_eat_alone">You will be alone</string>
    <string name="you_eat_to">"You eat to "</string>
    <string name="located_to">"Located to "</string>
    <string name="notifications">Notifications</string>
    <string name="receive_notifications">Receive notifications</string>
</resources>